tests/example_policy_blocking_ingress/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-to-apple
spec:
  podSelector:
    matchLabels:
      app: apple
  policyTypes:
  - Ingress
